--- a/portfolio_website_km/src/projects.css
+++ b/portfolio_website_km/src/projects.css
@@ -1,3 +1,20 @@
+#projectInfoBackground{
+    /* position: fixed;
+    background: #00000073;
+    height: 100vh;
+    top: 0;
+    width: 100%; */
+}
+
+.projectShadow{
+    position: fixed;
+    background: #00000073;
+    height: 100vh;
+    top: 0;
+    width: 100%;
+}
+
+
 #projectTitleContainer{
     padding-top: 25px;
     display: flex;
@@ -39,13 +56,17 @@
     transition: ease-in-out 0.4s; */
 
     position: fixed;
-    top: 25%;
+    /* top: 25%; */
+    top: 20%;
+
+
+
     /* left: 0%; */
     display: flex;
     transform: translateX(-100%);
     /* background-color: black; */
     width: 100%;
-    height: 65vh;
+    height: 69vh;
     transition: ease-in-out 0.4s;
     justify-content: center;
 }
