Added new design to back arrow on porject-info pop-ups and removed blink animation

--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -255,7 +255,7 @@
     width: 21.216407355px;
     height: 42.43281471px;
     position: relative;
-    animation: blink 2s linear infinite;
+    /* animation: blink 2s linear infinite; */
  }
 
  
@@ -296,9 +296,11 @@
  }
    .arrow.arrow--left:before,  .arrow.arrow--left:after {
     transition: left 0.3s 0.05s;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
  }
    .arrow.arrow--left span {
     transition: width 0.3s, left 0.3s 0.05s;
+    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px; */
  }
    .arrow.arrow--left:hover span,  .arrow.arrow--left:hover:before, .arrow.arrow--left:hover:after {
     left: -21.216407355px;
