Added dark-mode styling for porject info page

--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -179,7 +179,9 @@
 }
 
 #demoBtn:hover {
-  text-decoration: none;
+  /* text-decoration: none; */
+  background-color: #16161a;
+  color: white;
 }
 
 #demoBtn:active {
