--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 46px;
 }
 
 #contactInfo{
@@ -67,7 +68,7 @@
 
 #message{
     padding: 10px;
-    width: 300px;
+    /* width: 300px; */
     border-style: solid;
     border-radius: 3px;
     border-bottom: ridge;
@@ -75,6 +76,7 @@
     border-top-color: #ffffff00;
     border-left-color: #ffffff00;
     border-bottom-color: #6246ea;
+    width: 812px;
 }
 
 #message:focus-visible{
@@ -99,9 +101,14 @@
 }
 
 #contactText{
+    /* margin-top: 40px;
+    display: flex;
+    flex-direction: column; */
     margin-top: 40px;
     display: flex;
     flex-direction: column;
+    margin-left: -142px;
+    padding-left: 146px;
 }
 
 #sendBtnContainer{
