--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -14,6 +14,24 @@
     animation: 1s ease-out 0s 1 loadFromBtm;
 }
 
+.snappedRS1{
+    animation: 1s ease-out 1s 1 slideRight;
+    animation-fill-mode: forwards;  
+    opacity: 0;
+}
+
+.snappedRS2{
+    animation: 1s ease-out 2s 1 slideRight;
+    animation-fill-mode: forwards;  
+    opacity: 0;
+}
+
+.snappedRS3{
+    animation: 1s ease-out 3s 1 slideRight;
+    animation-fill-mode: forwards;  
+    opacity: 0;
+}
+
 #skillsContent{
     font-size: 20px;
 }
@@ -77,14 +95,14 @@
   }
   
   @keyframes slideRight {
-    0%{
-      /* left: 86.5%; */
-      right: 0;
-    }
-    100%{
-      left: 100%;
-      right: "";
-    }
+    0% {
+        transform: translateX(400px);
+        opacity: 0;
+      }
+      100% {
+        transform: translateX(0);
+        opacity: 100%;
+      }
   }
 
   @keyframes loadFromBtm {
