--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -33,10 +33,12 @@
   left: 2%;
   top: 42%;
   animation: 1s ease-out 0s 1 loadFromLeft;
+  background-color: #ffffff00;
+  z-index: 1;
 }
 
 #linkedin{
-
+  background-color: #ffffff00;
 }
 
 #line{
@@ -44,10 +46,12 @@
   height: 200px;
   margin-left: 18px;
   margin-top: 10px;
+  background-color: #ffffff00;
 }
 
 #github{
   padding-top: 3px;
+  background-color: #ffffff00;
 }
 
 #linkedinPic{
