Added menu transition for header. However part of header is still visibile after load if DL button is used. Transition occurs on load which needs tobe removed. The Color of the transtion changes to improper colors upon DL button change

--- a/portfolio_website_km/src/MenuTransition.css
+++ b/portfolio_website_km/src/MenuTransition.css
@@ -6,6 +6,13 @@
     transition: ease-in-out .3s;
     width: 100%;
     background-color: blueviolet;
+    /* opacity: 0; */
     transform: translateX(-100%);
     z-index: 3;
+}
+
+#transitionBoxTitle{
+    font-size: 300px;
+    color: white;
+    text-align: center;
 }
