Fixed darkmode for half view for skills title

--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -261,3 +261,14 @@
         opacity: 0;
     }
   }
+
+  @media (max-width: 970px) {
+    #paragraph1, #paragraph2{
+      font-size: 1.8vw;
+    }
+
+    #profilePic{
+      width: 48vw;
+    }
+
+  }
