Added half page views for first three pages of website

--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -256,4 +256,12 @@
     .job img {
         width: 26vw !important;
     }
+
+    .awardText1{
+        text-align: center;
+    }
+    
+    .awardText2{
+        text-align: center;
+    }
 }
