--- a/portfolio_website_km/src/Welcome.module.css
+++ b/portfolio_website_km/src/Welcome.module.css
@@ -272,3 +272,25 @@
     }
 
   }
+
+  @media (max-width: 500px) {
+    #welcomeAll{
+      flex-direction: column;
+    }
+
+    #welcomeContent{
+      margin-top: 100px;
+    }
+
+    #title{
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+  }
+
+  /* For acheive page make sure we check for screen size on load as well */
+  /* Reduce size of KM to fit screen sze prob just use adjusting vw */
+  /* Create another div for img between header and paragraph text to change on screen size */
+  /* Stop horizontal scroll */
+  /* Everything needs to be much smaller, icons and grpahics manual but text the smae size, i'd say as large as about page title text */
+  /* Remove linkedin and github logo */
