--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -157,3 +157,53 @@
         margin-top: 15px;
     }
 }
+
+@media(max-width: 500px) {
+    #skillsTitleContainer{
+        font-size: 6vw;
+        margin-top: 110px;
+    }
+
+    #word1Half, #word2Half{
+        padding-left: 10px;
+    }
+
+    #word3{
+        font-size: 7.645vw;
+    }
+
+    #title{
+        font-size: 5.2vw;
+    }
+
+    .icon{
+        width: 8vw;
+        height: 8vw;
+    }
+
+    #typescript_Logo{
+        height: 5vw;
+        width: 5vw;
+        margin-top: 7px;
+    }
+
+    #java_Logo{
+        height: 6vw;
+        width: 6vw;
+    }
+
+    #cShapr_Logo, #cPlusPlusLogo, #pythonLogo{
+        width: 7vw;
+        height: 7vw;
+        margin-top: 3px;
+    }
+
+    #react_Logo{
+        height: 7vw;
+        width: 7vw;
+    }
+
+    #skillsContent{
+        margin-top: 50px;
+    }
+}
