--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -253,8 +253,20 @@
         max-width: 30vw;
     }
 
-    .job img {
+    /* .job img {
         width: 26vw !important;
+    } */
+
+    #kiwi_WebsitePic {
+        width: 26vw;
+    }
+
+    #modsvr_Pic{
+        width: 26vw;
+    }
+
+    #ufit_Pic{
+        width: 26vw;
     }
 
     .awardText1{
@@ -264,12 +276,17 @@
     .awardText2{
         text-align: center;
     }
+
+    #awardsContainer{
+        display: flex;
+    }
 }
 
 @media(max-width: 500px) {
     #achieveTitleContainer{
         font-size: 6vw;
-        padding-top: 110px;
+        /* padding-top: 110px; */
+        padding-top: 75px;
         text-align: center;
     }
 
@@ -278,8 +295,9 @@
         margin-bottom: 60px;
     }
 
-    #acheiveSubtitle{
+    #achieveSubtitle{
         font-size: 7vw;
+
     }
 
     #workContainer{
@@ -295,14 +313,42 @@
 
     .jobh1{
         margin: 0;
+        font-size: 3vw;
     }
 
     .jobh2{
         margin-top: 0;
+        font-size: 3vw;
     }
 
     .achieveImg {
-        width: 50vw !important;
+        
         margin-top: 0;
+    }
+
+    #kiwi_WebsitePic {
+        margin-top: 0;
+        width: 50vw;
+        min-height: 115px;
+    }
+
+    #modsvr_Pic{
+        margin-top: 0;
+        width: 50vw;
+        min-height: 115px;
+    }
+
+    #ufit_Pic{
+        margin-top: 0;
+        width: 50vw;
+        min-height: 115px;
+    }
+
+    #workContainer{
+        gap: 22px;
+    }
+
+    #awardsContainer{
+        display: none;
     }
 }
