--- a/portfolio_website_km/src/Header.module.css
+++ b/portfolio_website_km/src/Header.module.css
@@ -71,6 +71,7 @@
   background-color: #a7a7fa;
   transition-duration: 0.5s;
   
+  
 
 
 
@@ -308,3 +309,19 @@ transition: all .2s ease-in;
   .menuDark{
 
   }
+
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .hLink{
+      box-shadow: none !important;
+      border-radius: 3px !important;
+      border-style: groove !important;
+    }
+}
+
+@supports (-webkit-backdrop-filter: blur(1px)) {
+  .hLink{
+    box-shadow: none !important;
+    border-radius: 3px !important;
+    border-style: solid;
+  }
+}
