--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -282,7 +282,7 @@
     }
 }
 
-@media(max-width: 500px) {
+@media(max-width: 500px) and (min-height: 851px) {
     #achieveTitleContainer{
         font-size: 6vw;
         /* padding-top: 110px; */
@@ -342,6 +342,77 @@
         margin-top: 0;
         width: 50vw;
         min-height: 115px;
+    }
+
+    #workContainer{
+        gap: 22px;
+    }
+
+    #awardsContainer{
+        display: none;
+    }
+}
+
+@media(max-height: 850px) {
+    #achieveTitleContainer{
+        font-size: 6vw;
+        /* padding-top: 110px; */
+        padding-top: 55px;
+        text-align: center;
+    }
+
+    #achieveTitle{
+        font-size: 9vw;
+        margin-bottom: 43px;
+    }
+
+    #achieveSubtitle{
+        font-size: 7vw;
+
+    }
+
+    #workContainer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .job{
+        width: 60vw;
+        max-width: 60vw;
+        height: 20vh;
+    }
+
+    .jobh1{
+        margin: 0;
+        font-size: 3vw;
+    }
+
+    .jobh2{
+        margin-top: 0;
+        font-size: 3vw;
+    }
+
+    .achieveImg {
+        
+        margin-top: 0;
+    }
+
+    #kiwi_WebsitePic {
+        margin-top: 0;
+        width: 40vw;
+        min-height: 76px;
+    }
+
+    #modsvr_Pic{
+        margin-top: 0;
+        width: 40vw;
+        min-height: 76px;
+    }
+
+    #ufit_Pic{
+        margin-top: 0;
+        width: 40vw;
+        min-height: 76px;
     }
 
     #workContainer{
