--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -310,7 +310,7 @@
     left: -21.216407355px;
    }
 
-   @media(max-width: 500px) {
+   @media(max-width: 500px) and (min-height: 851px) {
       #projectInfoBox{
         height: 71vh;
       }
@@ -335,4 +335,36 @@
         width: 90%;
         border-radius: 4px;
       }
+   }
+
+   @media(max-width: 500px) {
+    #projectInfoBox{
+      height: 73vh;
+    }
+
+    #projectInfoImg{
+      min-height: 186px;
+    }
+
+    #buttonsContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-left: 21px;
+      margin-bottom: 8px;
+    }
+
+    #projectInfoImg{
+      border-radius: 4px;
+    }
+
+    #logoBox{
+      margin-top: 5px;
+      margin-bottom: 25px;
+    }
+
+    #projectInfoContainer{
+      width: 90%;
+      border-radius: 4px;
+    }
    }
