--- a/portfolio_website_km/src/achieve.css
+++ b/portfolio_website_km/src/achieve.css
@@ -374,12 +374,13 @@
     #workContainer{
         flex-direction: column;
         align-items: center;
+        margin-top: -22px;
     }
 
     .job{
         width: 60vw;
         max-width: 60vw;
-        height: 20vh;
+        height: 17vh;
     }
 
     .jobh1{
@@ -400,19 +401,19 @@
     #kiwi_WebsitePic {
         margin-top: 0;
         width: 40vw;
-        min-height: 76px;
+        min-height: 70px;
     }
 
     #modsvr_Pic{
         margin-top: 0;
         width: 40vw;
-        min-height: 76px;
+        min-height: 70px;
     }
 
     #ufit_Pic{
         margin-top: 0;
         width: 40vw;
-        min-height: 76px;
+        min-height: 70px;
     }
 
     #workContainer{
