Added max-width value to big phones so it wouldn't interfere with big scree styling

--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -500,7 +500,7 @@
   }
 }
 
-@media(max-height: 850px) {
+@media(max-height: 850px) and (max-width: 500px) {
   #contactTitleContainer{
     padding-top: 45px;
   }
