Fixed contact box styling

--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -42,6 +42,7 @@
 #contactInfo{
     display: flex;
     flex-direction: row;
+    margin-right: 26.5%;
     /* gap: 30%; */
     justify-content: space-around;
     gap: 36%;
