--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 360px;
     object-fit: cover;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 #projectInfoDesc{
@@ -13,20 +15,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     background-color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 #close {
     overflow: hidden;
