Added better padding for biger screen sizes

--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -552,3 +552,13 @@
     margin-top: 100px;
   }
 }
+
+@media(min-height: 870px) {
+  #formContainer {
+    margin-top: 50px;
+  }
+
+  #footerText {
+    margin-top: 180px;
+  }
+}
