--- a/portfolio_website_km/src/ProjectInfo.css
+++ b/portfolio_website_km/src/ProjectInfo.css
@@ -15,8 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     background-color: white;
 }
