Made suyre previous padding changes didn't affet mobile screen sizes

--- a/portfolio_website_km/src/Contact.css
+++ b/portfolio_website_km/src/Contact.css
@@ -553,7 +553,7 @@
   }
 }
 
-@media(min-height: 870px) {
+@media(min-height: 870px) and (min-width: 500px) {
   #formContainer {
     margin-top: 50px;
   }
