--- a/portfolio_website_km/src/skill.css
+++ b/portfolio_website_km/src/skill.css
@@ -261,7 +261,7 @@
       }
     }
 
-@media(min-height: 870px) {
+@media(min-height: 870px) and (min-width: 500px) {
     #skillsContainer{
         align-items: center;
         display: flex;
